--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>By <a href="mailto:carlossg00@hotmail.com" targe=t"_top"></a>Carlos </p>
+	<p>By <a href="mailto:carlossg00@hotmail.com" targe=t"_top">Carlos</a> </p>
 </footer>
