--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136778231-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
     gtag('config', 'UA-136778231-1');
   </script>
@@ -20,5 +23,5 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-
+  <link rel="stylesheet" href="{{ " assets/css/main.css " | prepend: site.baseurl }}">
 </head>
