--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,6 +45,7 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 main {
 	padding: 0 15px;
